# pico-watering-system

./: CMakeLists.txt  README.md
src/cmd/: cmd.c  cmd.h
src/drv/: drv.c  drv.h  drv_relay.c  drv_swich.c  drv_temp_sensor.c
src/hw/: hw.c  hw.h
src/sys/: sys.h  sys_init.c  sys_main.c  sys_task.c
tests/micropython/: switch.py
